✨(web) generate new Gatsby application
 * configure pnpm for monorepo
 * configure ESLint for react
 * run `gatsby new`
 * configure Gatsby for pnpm monorepo
 * CI runs tests on each package
 * add `DEVELOPING.md` docs

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,3 +22,5 @@ jobs:
       run: pnpm recursive install
     - name: lint
       run: pnpm run lint
+    - name: test
+      run: pnpm run -r test
